--- a/.github/workflows/build-wheels-vulkan-win.yaml
+++ b/.github/workflows/build-wheels-vulkan-win.yaml
@@ -1,9 +1,6 @@
 name: Build Wheels (Vulkan) (Windows)
 
 on:
-  push:
-    branches:
-      - david/vulkan-sycl
   workflow_dispatch:
 
 permissions:
@@ -25,7 +22,7 @@ jobs:
         run: |
           $matrix = @{
               'os' = @('sdk-windows-8-core')
-              'pyver' = @("3.10")
+              'pyver' = @("3.7", "3.8", "3.9", "3.10", "3.11", "3.12")
               'vulkan_version' = @("1.3.261.1")
               'releasetag' = @("basic")
           }
@@ -84,29 +81,13 @@ jobs:
 
       - name: Build Wheel
         run: |
-          try {
-            # Set environment variables for CMake and Vulkan
-            $env:CMAKE_ARGS="-DGGML_VULKAN=ON"
-            $env:VULKAN_SDK="C:\VulkanSDK\${{ env.VULKAN_VERSION }}"
-            $env:PATH="$env:VULKAN_SDK\Bin;$env:PATH"
+          # Set environment variables for CMake and Vulkan
+          $env:CMAKE_ARGS="-DGGML_VULKAN=ON"
+          $env:VULKAN_SDK="C:\VulkanSDK\${{ env.VULKAN_VERSION }}"
+          $env:PATH="$env:VULKAN_SDK\Bin;$env:PATH"
 
-            # Print CMake version and args for debugging
-            Write-Host "CMake version:"
-            cmake --version
-            Write-Host "CMake args: $env:CMAKE_ARGS"
-
-            # Build the wheel with verbose output
-            python -m build --wheel --verbose 2>&1 | Tee-Object -FilePath build_log.txt
-
-            if (-not (Test-Path dist/*.whl)) {
-              throw "Wheel file not found in dist directory"
-            }
-          } catch {
-            Write-Host "Build log content:"
-            Get-Content build_log.txt
-            Write-Error "Build failed: $_"
-            exit 1
-          }
+          # Build the wheel
+          python -m build --wheel
 
       - name: Upload Wheel Artifact
         uses: actions/upload-artifact@v4
@@ -118,6 +99,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*
+          # Set tag name to <tag>-vulkan<vulkan_version>
           tag_name: ${{ github.ref_name }}-vulkan${{ env.VULKAN_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
