--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -92,59 +92,59 @@ jobs:
           name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
 
-  # build_wheels_arm64:
-  #   name: Build arm64 wheels
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: "recursive"
+  build_wheels_arm64:
+    name: Build arm64 wheels
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: "recursive"
 
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v3
-  #       with:
-  #         platforms: linux/arm64
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
 
-  #     - name: Build wheels
-  #       uses: pypa/cibuildwheel@v2.20.0
-  #       env:
-  #         CIBW_REPAIR_WHEEL_COMMAND: ""
-  #         CIBW_BUILD_FRONTEND: "build"
-  #         CIBW_SKIP: "*musllinux* pp*"
-  #         CIBW_ARCHS: "aarch64"
-  #         CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
-  #         CMAKE_BUILD_PARALLEL_LEVEL: $(nproc)
-  #       with:
-  #         output-dir: wheelhouse
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.20.0
+        env:
+          CIBW_REPAIR_WHEEL_COMMAND: ""
+          CIBW_BUILD_FRONTEND: "build"
+          CIBW_SKIP: "*musllinux* pp*"
+          CIBW_ARCHS: "aarch64"
+          CIBW_BUILD: "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
+          CMAKE_BUILD_PARALLEL_LEVEL: $(nproc)
+        with:
+          output-dir: wheelhouse
 
-  #     - name: Upload wheels as artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: wheels_arm64
-  #         path: ./wheelhouse/*.whl
+      - name: Upload wheels as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels_arm64
+          path: ./wheelhouse/*.whl
 
-  # build_sdist:
-  #   name: Build source distribution
-  #   runs-on: ubuntu-latest
+  build_sdist:
+    name: Build source distribution
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: "recursive"
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.8"
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip build
-  #         python -m pip install -e .
-  #     - name: Build source distribution
-  #       run: |
-  #         python -m build --sdist
-  #     - uses: actions/upload-artifact@v4
-  #       with:
-  #         name: sdist
-  #         path: ./dist/*.tar.gz
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: "recursive"
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.8"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip build
+          python -m pip install -e .
+      - name: Build source distribution
+        run: |
+          python -m build --sdist
+      - uses: actions/upload-artifact@v4
+        with:
+          name: sdist
+          path: ./dist/*.tar.gz
 
   # release:
   #   name: Release
