--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,10 @@
 	path = dependency/llama.cpp
 	url = https://github.com/NexaAI/llama.cpp.git
 	branch = master-release
+[submodule "dependency/nexa_llama.cpp"]
+	path = dependency/nexa_llama.cpp
+	url = https://github.com/NexaAI/llama.cpp
+	branch = nexa-audio-lm
 [submodule "nexa/eval/benchmark_tasks"]
 	path = nexa/eval/benchmark_tasks
 	url = https://github.com/NexaAI/benchmark-tasks.git
