--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -68,7 +68,7 @@ jobs:
         run: |
           $cudaVersion = $env:CUDAVER
           conda install -y -c nvidia/label/cuda-$cudaVersion cuda
-          conda install -y -c conda-forge libgcc libgomp openmp
+          conda install -y -c conda-forge libgcc libgomp openmp glibc
           sudo apt-get update && sudo apt-get install -y libgomp1
           python -m pip install build wheel
 
@@ -89,31 +89,31 @@ jobs:
           echo "## Checking CUDA shared libraries..."
           ls -l $CONDA_PREFIX/lib/ | grep "libcudart.so" || echo "Missing libcudart.so!"
 
-      # - name: Build Wheel
-      #   run: |
-      #     $cudaVersion = $env:CUDAVER.Remove($env:CUDAVER.LastIndexOf('.')).Replace('.','')
-      #     $env:CUDA_PATH = $env:CONDA_PREFIX
-      #     $env:CUDA_HOME = $env:CONDA_PREFIX
-      #     $env:CUDA_TOOLKIT_ROOT_DIR = $env:CONDA_PREFIX
-      #     if ($IsLinux) {
-      #       $env:LD_LIBRARY_PATH = $env:CONDA_PREFIX + '/lib:' + $env:LD_LIBRARY_PATH
-      #     }
-      #     $env:VERBOSE = '1'
+      - name: Build Wheel
+        run: |
+          $cudaVersion = $env:CUDAVER.Remove($env:CUDAVER.LastIndexOf('.')).Replace('.','')
+          $env:CUDA_PATH = $env:CONDA_PREFIX
+          $env:CUDA_HOME = $env:CONDA_PREFIX
+          $env:CUDA_TOOLKIT_ROOT_DIR = $env:CONDA_PREFIX
+          if ($IsLinux) {
+            $env:LD_LIBRARY_PATH = $env:CONDA_PREFIX + '/lib:' + $env:LD_LIBRARY_PATH
+          }
+          $env:VERBOSE = '1'
 
-      #     $env:CMAKE_BUILD_PARALLEL_LEVEL = $(nproc)
-      #     $env:CMAKE_ARGS = '-DSD_CUBLAS=ON -DGGML_CUDA=ON -DGGML_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES=all'
-      #     $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_CUDA_FORCE_MMQ=ON -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
+          $env:CMAKE_BUILD_PARALLEL_LEVEL = $(nproc)
+          $env:CMAKE_ARGS = '-DSD_CUBLAS=ON -DGGML_CUDA=ON -DGGML_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES=all'
+          $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_CUDA_FORCE_MMQ=ON -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
 
-      #     # Debug OpenMP detection
-      #     echo "Checking OpenMP..."
-      #     echo "GCC Version:"
-      #     gcc --version
-      #     echo "Checking OpenMP Flags:"
-      #     cpp -fopenmp -dM | Select-String -Pattern "OPENMP" || echo "OpenMP NOT found!"
+          # Debug OpenMP detection
+          echo "Checking OpenMP..."
+          echo "GCC Version:"
+          gcc --version
+          echo "Checking OpenMP Flags:"
+          cpp -fopenmp -dM | Select-String -Pattern "OPENMP" || echo "OpenMP NOT found!"
 
-      #     python -m build --wheel
-      #     # write the build tag to the output
-      #     Write-Output "CUDA_VERSION=$cudaVersion" >> $env:GITHUB_ENV
+          python -m build --wheel
+          # write the build tag to the output
+          Write-Output "CUDA_VERSION=$cudaVersion" >> $env:GITHUB_ENV
 
       - uses: softprops/action-gh-release@v2
         with:
