--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           $matrix = @{
               'os' = @('ubuntu-20.04')
-              'pyver' = @("3.8", "3.9", "3.10", "3.11", "3.12")
+              'pyver' = @("3.7", "3.8", "3.9", "3.10", "3.11", "3.12")
               'cuda' = @("12.4.1")
               'releasetag' = @("basic")
           }
@@ -52,37 +52,34 @@ jobs:
           python-version: ${{ matrix.pyver }}
           cache: "pip"
 
-      - name: Setup Miniconda
+      - name: Setup Mamba
         uses: conda-incubator/setup-miniconda@v3.0.4
         with:
           activate-environment: "build"
           python-version: ${{ matrix.pyver }}
-          miniconda-version: "latest"
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          use-mamba: true
           add-pip-as-python-dependency: true
           auto-activate-base: false
 
       - name: Install Dependencies
         env:
-          CONDA_DOWNLOAD_FAILFAST: "0"
-          CONDA_NO_LOW_SPEED_LIMIT: "1"
+          MAMBA_DOWNLOAD_FAILFAST: "0"
+          MAMBA_NO_LOW_SPEED_LIMIT: "1"
         run: |
           $cudaVersion = $env:CUDAVER
-          conda install -y -c nvidia/label/cuda-$cudaVersion cuda
-          conda install -y -c conda-forge libgomp openmp
-          sudo apt-get update && sudo apt-get install -y libgomp1
+          mamba install -y 'cuda' -c nvidia/label/cuda-$cudaVersion
           python -m pip install build wheel
-
+      
       - name: Debug CUDA & GLIBC Issues
-        run: |
-          echo "check gcc"
-          gcc --version
-          which gcc
+      run: |
+        echo "Check GCC"
+        gcc --version
+        which gcc
 
-          echo "## Checking if libdl and librt are available..."
-          ldconfig -p | grep -E "libdl|librt" || echo "Missing libdl or librt!"
-
-          echo "## Checking Conda environment libraries..."
-          conda list | grep -E "libgcc-ng|glibc" || echo "Missing libgcc-ng or glibc in Conda!"
+        echo "## Checking if libdl and librt are available"
+        ldconfig -p | grep -E "libdl|librt" || echo "Missing libdl or librt!"
 
       - name: Build Wheel
         run: |
@@ -98,13 +95,6 @@ jobs:
           $env:CMAKE_BUILD_PARALLEL_LEVEL = $(nproc)
           $env:CMAKE_ARGS = '-DSD_CUBLAS=ON -DGGML_CUDA=ON -DGGML_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES=all'
           $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_CUDA_FORCE_MMQ=ON -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
-
-          # Debug OpenMP detection
-          echo "Checking OpenMP..."
-          echo "GCC Version:"
-          gcc --version
-          echo "Checking OpenMP Flags:"
-          cpp -fopenmp -dM | Select-String -Pattern "OPENMP" || echo "OpenMP NOT found!"
 
           python -m build --wheel
           # write the build tag to the output
